--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 #datasource properties
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bank_App_Web_MVC
+spring.datasource.url=jdbc:mysql://kartik:3306/sbms
 spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #To Print queries on console
